Add AboutMe.txt and update multiple HTML and CSS files

--- a/cyanobacteria.html
+++ b/cyanobacteria.html
@@ -11,7 +11,7 @@
         <div class = "nav-wrapper">
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">About me</a></li>
                     <li><a href="microscopy.html">Microscopy</a></li>
                     <li><a href="agrivoltaics.html">Agrivoltaics</a></li>
                     <li><a href="cyanobacteria.html">Cyanobacteria</a></li>
@@ -20,15 +20,22 @@
                 </ul>
            </nav>
         </div>
+        
     </header><hr>
 
-    <h2>mRNA Localization & Thylakoid Protein Biogenesis in Cyanobacteria</h2>
+    <h3>mRNA Localization & Thylakoid Protein Biogenesis in Cyanobacteria</h3>
     <h4>PhD Research, Queen Mary University of London | 2019–2023</h4>
        <ul>
            <li>Investigated mRNA localisation and thylakoid protein biogenesis in cyanobacteria, integrating quantitative imaging analysis to study molecular distribution.</li>
            <li>Optimised RNA-FISH protocols to visualise intracellular mRNA patterns, applying ImageJ analysis for signal quantification.</li>
            <li>Constructed 3 mutants in Anabaena and identified an RNA-binding protein important for the thylakoid protein translation and assembly (published as first author <a href = "https://journals.asm.org/doi/10.1128/jb.00328-24">DOI: 10.1128/jb.00328-24</a>).</li>
        </ul>
-
+    <h4>Projects</h4>
+    <ul>
+        <li><a href="agrivoltaics.html">Agrivoltaics Research</a></li>
+        <li>mRNA Localization & Thylakoid Protein Biogenesis in Cyanobacteria</li>
+        <li>Microbial Diversity & Bioinformatics Analysis</li>
+        <li>Deep-Sea Microbial Ecology</li>
+    </ul>
 </body>
 </html>
