--- a/agrivoltaics.html
+++ b/agrivoltaics.html
@@ -11,7 +11,7 @@
         <div class = "nav-wrapper">
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">About me</a></li>
                     <li><a href="microscopy.html">Microscopy</a></li>
                     <li><a href="agrivoltaics.html">Agrivoltaics</a></li>
                     <li><a href="cyanobacteria.html">Cyanobacteria</a></li>
