--- a/microscopy.html
+++ b/microscopy.html
@@ -12,12 +12,13 @@
         <div class = "nav-wrapper">
             <nav>
                 <ul>
-                    <li><a href="index.html">About me</a></li>
-                    <li><a href="microscopy.html">Microscopy</a></li>
+                    <li><a href="index.html">About me</a></li>                    
                     <li><a href="agrivoltaics.html">Agrivoltaics</a></li>
                     <li><a href="cyanobacteria.html">Cyanobacteria</a></li>
-                    <li><a href="">Publication</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="microscopy.html">Microscopy</a></li>
+                    <li><a href="marine.html">Marine Microbiology</a></li>
+                    <li><a href="publication.html">Publication</a></li>
+                    
                 </ul>
            </nav>
         </div>
