main change: layout of agrivoltaics image and text

--- a/src/microscopy.html
+++ b/src/microscopy.html
@@ -62,7 +62,7 @@
 
 
         </div>
-        <img src="../images/caad-DiAna.png">
+        <img src="../images/synechocystis_curT.png">
 
     </div>
 <!--    </div>-->
